2001-01-04  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>

	* conf/nfs_prot/nfs_prot_irix6.h: redefine "groups" typedef to
	struct groups, not the pointer to this struct.

	* include/am_xdr_func.h: prototype should take "groups *" as 2nd
	arg.

	* libamu/xdr_func.c (xdr_groupnode, xdr_exportnode): change 
	casting of second arg of xdr_groups to "groups *".  It's only
	needed for irix6, due to problems with xdr_groups on that platform.
	(xdr_groups): prototype should take "groups *" as 2nd arg.

	* conf/nfs_prot/nfs_prot_aix*.h: correct xdr_groups extern
	definition.  Report from Ahmon Dancy <dancy@franz.com>.	

2000-12-06  Ion Badulescu  <ionut@moisil.dev.hydraweb.com>

	* include/am_defs.h: force non-inclusion of <linux/fs.h> via
	<linux/auto_fs.h>

	* conf/autofs/autofs_linux.c (autofs_mounted): rename
	AUTOFS_MIN_PROTO_VERSION to AUTOFS_MIN_VERSION (leftover from
	previous commit)

	* configure.in: fixed libtool version

2000-12-02  Ion Badulescu  <ionut@moisil.dev.hydraweb.com>

	* doc/am-utils.texi (opts Option): document lock/nolock

2000-12-02  Ion Badulescu  <ionut@moisil.dev.hydraweb.com>

	* conf/autofs/autofs_linux.h: added struct autofs_pending_mount;
	modified autofs_fh_t to have a linked list of autofs_pending_mount;
	added some support for autofs4

	* conf/autofs/autofs_linux.c: use a linked list for pending
	request, to allow for handling multiple simultaneous request;
	incipient non-functional support for autofs4; incipient
	non-functional support for bind-mounting

	* amd/amd.c (main): print a warning if PROCLOCK is requested but
	the O/S doesn't support it

	* libamu/mount_fs.c (mnt_flags): allow the use of the "nolock"
	option

	* include/am_defs.h: don't include <linux/fs.h> on a glibc2
	system; include <linux/auto_fs4.h> if it exists, instead of
	<linux/auto_fs.h>

	* include/am_compat.h: define the "nolock" mnttab option if the
	NONLM NFS mount option is defined

	* acconfig.h: added MNT2_NFS_OPT_NONLM, MNT2_GEN_OPT_BIND
