@@ -38,7 +38,7 @@
  *
  *      %W% (Berkeley) %G%
  *
- * $Id: nfs_prot_irix6.h,v 1.5 2001/01/05 03:13:41 ezk Exp $
+ * $Id: nfs_prot_irix6.h,v 1.6 2001/01/05 10:14:12 ezk Exp $
  *
  */
 
@@ -60,10 +60,13 @@
 #ifdef HAVE_SYS_FS_NFS_H
 # include <sys/fs/nfs.h>
 #endif /* HAVE_SYS_FS_NFS_H */
-#ifdef HAVE_RPCSVC_MOUNT_H
+
+#ifdef HAVE_RPCSVC_MOUNT_H_off
 # include <rpcsvc/mount.h>
 #endif /* HAVE_RPCSVC_MOUNT_H */
 
+/* evil: don't include */
+#undef HAVE_RPCSVC_MOUNT_H
 
 /*
  * MACROS
@@ -77,6 +80,18 @@
 #define NFS_COOKIESIZE 4
 #define	MNTPATHLEN 1024
 #define	MNTNAMLEN 255
+#define FHSIZE 32
+
+#define MOUNTPROG 100005
+#define MOUNTPROC_MNT 1
+#define MOUNTPROC_DUMP 2
+#define MOUNTPROC_UMNT 3
+#define MOUNTPROC_UMNTALL 4
+#define MOUNTPROC_EXPORT 5
+#define MOUNTPROC_EXPORTALL 6
+#define MOUNTVERS_ORIG 1
+#define MOUNTVERS 1
+#define MOUNTVERS3      3
 
 #define NFSMODE_FMT 0170000
 #define NFSMODE_DIR 0040000
@@ -156,7 +171,7 @@ typedef struct exports *exports;
 typedef struct exports exportnode;
 typedef struct fattr nfsfattr;
 typedef struct fhstatus fhstatus;
-typedef struct groups groups;
+typedef struct groups *groups;
 typedef struct groups groupnode;
 typedef struct linkargs nfslinkargs;
 typedef struct mountlist *mountlist;
@@ -230,6 +245,7 @@ extern bool_t xdr_dirlist(XDR *, nfsdirlist*);
 extern bool_t xdr_readdirres(XDR *, nfsreaddirres*);
 extern bool_t xdr_statfsokres(XDR *, nfsstatfsokres*);
 extern bool_t xdr_statfsres(XDR *, nfsstatfsres*);
+
 
 /*
  * STRUCTURES:
@@ -400,6 +416,88 @@ struct statfsres {
   } sfr_u;
 };
 
+
+/*
+ * Partial definitions from rpcsvc/mount.h (can't use that header
+ * because it includes other "bad" stuff wrt xdr_groups.
+ */
+
+struct mountlist {
+  char *ml_name;
+  char *ml_path;
+  struct mountlist *ml_nxt;
+};
+
+struct fhstatus {
+  int fhs_status;
+  fhandle_t fhs_fh;
+};
+
+typedef char fhandle[FHSIZE];
+
+typedef struct {
+  u_int fhandle3_len;
+  char *fhandle3_val;
+} fhandle3;
+
+enum mountstat3 {
+  MNT_OK = 0,
+  MNT3ERR_PERM = 1,
+  MNT3ERR_NOENT = 2,
+  MNT3ERR_IO = 5,
+  MNT3ERR_ACCES = 13,
+  MNT3ERR_NOTDIR = 20,
+  MNT3ERR_INVAL = 22,
+  MNT3ERR_NAMETOOLONG = 63,
+  MNT3ERR_NOTSUPP = 10004,
+  MNT3ERR_SERVERFAULT = 10006
+};
+typedef enum mountstat3 mountstat3;
+
+struct mountres3_ok {
+  fhandle3 fhandle;
+  struct {
+    u_int auth_flavors_len;
+    int *auth_flavors_val;
+  } auth_flavors;
+};
+typedef struct mountres3_ok mountres3_ok;
+
+struct mountres3 {
+  mountstat3 fhs_status;
+  union {
+    mountres3_ok mountinfo;
+  } mountres3_u;
+};
+typedef struct mountres3 mountres3;
+
+/*
+ * List of exported directories
+ * An export entry with ex_groups
+ * NULL indicates an entry which is exported to the world.
+ */
+struct exports {
+  dev_t ex_dev;			/* dev of directory */
+  char *ex_name;		/* name of directory */
+  struct groups *ex_groups;	/* groups allowed to mount this entry */
+  struct exports *ex_next;
+  short ex_rootmap;		/* id to map root requests to */
+  short ex_flags;		/* bits to mask off file mode */
+};
+
+struct groups {
+  char *g_name;
+  struct groups	*g_next;
+};
+
+extern bool_t xdr_groups(XDR *, groups *);
+extern bool_t xdr_exports(XDR *, struct exports **);
+extern bool_t xdr_mountres3_ok(XDR *, mountres3_ok *);
+extern bool_t xdr_mountres3(XDR *, mountres3 *);
+extern bool_t xdr_fhstatus(XDR *, struct fhstatus *);
+extern bool_t xdr_mountlist(XDR *, struct mountlist **);
+
+
 /*
  **************************************************************************
  * Irix 6's autofs is not ported or tested yet...
@@ -415,5 +513,6 @@ struct statfsres {
 #ifdef HAVE_FS_AUTOFS
 # undef HAVE_FS_AUTOFS
 #endif /* HAVE_FS_AUTOFS */
+
 
 #endif /* not _AMU_NFS_PROT_H */
