@@ -1,3 +1,11 @@
+Fri Jan  5 05:12:02 2001  Erez Zadok  <ezk@subzero.cs.columbia.edu>
+
+	* libamu/xdr_func.c: removed ugly casts to "groups*", now that
+	irix6's nfs_prot.h is fixed.
+
+	* conf/nfs_prot/nfs_prot_irix6.h: copied relevant parts of
+	<rpcsvc/mount.h> here so we don't have to include this header.
+
 2001-01-04  Erez Zadok  <ezk@shekel.mcl.cs.columbia.edu>
 
 	* conf/nfs_prot/nfs_prot_irix6.h: redefine "groups" typedef to
